--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
             "BS\\CoreBundle" : ""
         }
     },
-    "target-dir" : "BS/CoreBundle",
+    "target-dir" : "/",
     "repositories" : [{
     }],
     "extra" : {
